[package]
name = "rust-config-service"
version = "0.1.0"
authors = ["jitender.kumar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }
dotenv = "0.9.0"
actix = "0.8.3"
actix-web = "1.0.9"
futures = "0.1"
failure = "0.1.6"
r2d2 = "0.8.6"
log = "0.4.8"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
json = "*"
